# AoC-2023

./: Cargo.toml  README.md
Day1/src/: part1.rs  part2.rs
Day2/src/: part1.rs  part2.rs
Day3/src/: part1.rs  part2.rs
Day4/src/: part1.rs  part2.rs
Day5/src/: part1.rs  part2.rs
Day6/src/: part1.rs  part2.rs
