[package]
name = "AoC"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day1-part1"
path = "Day1/src/part1.rs"

[[bin]]
name = "day1-part2"
path = "Day1/src/part2.rs"

[[bin]]
name = "day2-part1"
path = "Day2/src/part1.rs"

[[bin]]
name = "day2-part2"
path = "Day2/src/part2.rs"

[[bin]]
name = "day3-part1"
path = "Day3/src/part1.rs"

[[bin]]
name = "day3-part2"
path = "Day3/src/part2.rs"

[[bin]]
name = "day4-part1"
path = "Day4/src/part1.rs"

[[bin]]
name = "day4-part2"
path = "Day4/src/part2.rs"

[[bin]]
name = "day5-part1"
path = "Day5/src/part1.rs"

[[bin]]
name = "day5-part2"
path = "Day5/src/part2.rs"

[[bin]]
name = "day6-part1"
path = "Day6/src/part1.rs"

[[bin]]
name = "day6-part2"
path = "Day6/src/part2.rs"

[dependencies]
regex = "1.10.2"
